# bili-hardcore-benchmark

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  DEVELOPER.md  README.md  pyproject.toml
.github/workflows/: lint.yml
benchmark_data/: dashboard.html
bili-hardcore-benchmark/: container.py  export.py  main.py
bili-hardcore-benchmark/application/: __init__.py
bili-hardcore-benchmark/application/models/: __init__.py  benchmark.py  question.py
bili-hardcore-benchmark/application/services/: __init__.py  benchmark_service.py  export_service.py  quiz_service.py
bili-hardcore-benchmark/common/: __init__.py  exceptions.py  logging.py  types.py
bili-hardcore-benchmark/infrastructure/ai/: __init__.py  openai_provider.py  provider.py
bili-hardcore-benchmark/infrastructure/bilibili/: __init__.py  auth.py  client.py  senior.py  user.py
bili-hardcore-benchmark/infrastructure/config/: __init__.py  settings.py
bili-hardcore-benchmark/infrastructure/persistence/: __init__.py  question_store.py
bili_hardcore_benchmark/: container.py  export.py  main.py
bili_hardcore_benchmark/application/: __init__.py
bili_hardcore_benchmark/application/models/: __init__.py  benchmark.py  question.py
bili_hardcore_benchmark/application/services/: benchmark_service.py  export_service.py  quiz_service.py
bili_hardcore_benchmark/common/: __init__.py  exceptions.py  types.py
bili_hardcore_benchmark/core/: exceptions.py  logging.py  models.py  settings.py
bili_hardcore_benchmark/core/services/: __init__.py  auth_service.py  benchmark_service.py  export_service.py  quiz_service.py
bili_hardcore_benchmark/infrastructure/ai/: __init__.py  openai_provider.py  provider.py
bili_hardcore_benchmark/infrastructure/bilibili/: __init__.py  auth.py  client.py  senior.py  user.py
bili_hardcore_benchmark/infrastructure/config/: settings.py
bili_hardcore_benchmark/infrastructure/persistence/: __init__.py  (+1 more)
lm_eval_tasks/bili_hardcore/: README.md  __init__.py  bili_hardcore.yaml  bili_hardcore_anime.yaml  bili_hardcore_game.yaml  bili_hardcore_kichiku.yaml  bili_hardcore_knowledge.yaml  bili_hardcore_literature.yaml  bili_hardcore_movie.yaml  bili_hardcore_music.yaml  bili_hardcore_sports.yaml  utils.py
results/: results_visualization.html
(+6 files in other folders)
