[project]
name = "bili-hardcore-benchmark"
version = "1.0.0"
description = "Bilibili 硬核会员答题 Benchmark 收集工具"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "bili-hardcore-benchmark"}
]
keywords = ["bilibili", "benchmark", "llm", "quiz"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "certifi>=2021.10.8",
    "charset-normalizer>=3.0.0",
    "datasets>=2.0.0",
    "httpx>=0.25.0",
    "idna>=3.4",
    "loguru>=0.6.0",
    "openai>=1.0.0",
    "plotly>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=0.19.0",
    "qrcode>=7.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "ruff>=0.0.260",
    "mypy>=1.0.0",
]

[project.scripts]
bili-hardcore = "bili-hardcore-benchmark.main:main"
bili-hardcore-export = "bili-hardcore-benchmark.export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bili-hardcore-benchmark"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"

[[tool.mypy.overrides]]
module = [
    "qrcode.*",
    "datasets.*",
]
ignore_missing_imports = true
